@@ -58,6 +58,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13255: wrong docstrings in array module.
+
 - Issue #9168: now smtpd is able to bind privileged port.
 
 - Issue #12529: fix cgi.parse_header issue on strings with double-quotes and
